# image3d

./: .clangd  CMakeLists.txt  LICENSE  Makefile  README.md  README_installation.md  noxfile.py  pyproject.toml
.github/workflows/: conda.yml  pip.yml  wheels.yml
conda.recipe/: meta.yaml
docs/: image3d.rst  index.rst  python_example.rst
src/: vxlPyU8.cpp  vxlPyUX.hpp
src/_include/: CMakeLists.txt  IOUtils.h  InputFile.h  README.md  SiRun.cpp  SiRun.h  globals.h  instream.h  makefile  test_input.cpp  test_sirun.cpp  typses.h
src/_voxlib/: KozenyCarman.h  VxlStrips.cpp  VxlStrips.h  performance.cpp  randsToVoxel.h  shapeToVoxel.h  test.py  voxelGrad.cpp  voxelImage.cpp  voxelImage.h  voxelImageCutOutside.h  voxelImageI.h  voxelImageML.h  voxelImageProcPy.cpp  voxelImageProcess.cpp  voxelImageProcess.h  voxelImageRegister.h  voxelNoise.h  voxelPng_lpng.h  voxelPng_stbi.h  voxelRegions.h  voxelTiff.h  voxelTime.h  vxlPro.cpp  vxlPro1.cpp  vxlPro2.cpp
src/image3d/: __init__.pyi
src/image3d/_core/: sirun.pyi  voxlib.pyi
src/voxlib/: _core.pyi
tests/: test_2to3d.py  test_basic.py  test_tiff.py
